# app/api/models/stack_id.py
@@ -1,0 +1,29 @@
+# coding: utf-8
+from app.api.models.base_model_ import Model
+from app import util
+
+
+class StackID(Model):  # TODO
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self):  # noqa: E501
+        """StackID - a model defined in Swagger
+
+        """
+        self.swagger_types = {}
+
+        self.attribute_map = {}
+
+    @classmethod
+    def from_dict(cls, dikt) -> "StackID":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The StackID of this StackID.  # noqa: E501
+        :rtype: StackID
+        """
+        return util.deserialize_model(dikt, cls)
